# recursive_regex

./: .example.txt.swp  .flake8  .gitignore  .pre-commit-config.yaml  .recursive_regex.py.swp  README.md  example.txt  pseudo.py  pyproject.toml  recursive_regex.py  rere_parameters.yaml  setup.cfg  setup.py
src/recursive_regex/: recursive_regex.py  rere_parameters.yaml
tests/: example1.txt  test.py  test.sh
tests/d1/d12/: example.txt
