[metadata]
name = recursive-regex
version = 0.1.1
author = Isidro Arias
author_email = isidroariass@hotmail.es
description = Search and substitute an regular expresion recursively in a directory.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidroas/recursive_regex
project_urls =
    Bug Tracker = https://github.com/isidroas/recursive_regex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyYAML == 5.*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    recursive_regex = recursive_regex.recursive_regex:run
    recursive_regex_sample_config = recursive_regex.sample_config:sample_config
